add .dockerignore and fix

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Trigger workflow pada push ke main branch
+      - main 
 
 jobs:
   build:
@@ -24,17 +24,22 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
-    # Run linting (optional)
+    # Run linting
     - name: Run Lint
       run: npm run lint
 
-    # Run tests (optional)
+    # Run tests
     - name: Run Tests
       run: npm run test
 
     # Build the application
     - name: Build the Application
       run: npm run build
+
+    # Build Docker image
+    - name: Build Docker Image
+      run: |
+        docker build -t muhammadfaiz19/pz-task7-component-testing:$GITHUB_SHA .
 
     # Log in to Docker Hub
     - name: Log in to Docker Hub
@@ -43,16 +48,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Set up Docker Compose
-    - name: Set up Docker Compose
-      run: |
-        sudo apt-get install -y docker-compose
-
-    # Build Docker Compose services
-    - name: Build Docker Compose
-      run: docker-compose -f docker-compose.yml build
-
-    # Push Docker Image to Docker Hub
+    # Push Docker image to Docker Hub
     - name: Push Docker Image
       run: |
-        docker-compose -f docker-compose.yml push
+        docker push muhammadfaiz19/pz-task7-component-testing:$GITHUB_SHA
