--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-typing-effect": "^2.0.5",
+    "text-encoding": "^0.7.0",
     "util": "^0.12.5",
     "yup": "^1.4.0"
   },
